fixing layout issue for share by email

--- a/sitterfied/static_source/mobile/style/style.css
+++ b/sitterfied/static_source/mobile/style/style.css
@@ -173,3 +173,4 @@ input[type="submit"] {border-radius:3px;color:#fff;text-transform:uppercase;disp
 
 /* Footer */
 .footer {text-align:center;background:#edeff2 url(../images/footer.gif) repeat-x;padding:27px 0 20px 0;}
+.padding40top{ padding-top: 40px;}
